--- a/docker/DockerfileBuild
+++ b/docker/DockerfileBuild
@@ -6,39 +6,35 @@ WORKDIR /app
 RUN groupadd -r rocketchat && useradd -r -g rocketchat rocketchat \
     && apt-get update && apt-get install -y --no-install-recommends \
             ca-certificates curl fontconfig git make openssh-server python vim \
+            libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb \
         && aptMark="$(apt-mark showmanual)" && apt-get install -y --no-install-recommends \
             g++ \
         && rm -rf /var/lib/apt/lists/* \
-    && npm install -g node-gyp-cache && npm config set node_gyp node-gyp-cache \
     \
     && curl https://install.meteor.com/?release=2.1.1 | sh \
+    && meteor npm install -g yarn && yarn config set install.prefer-offline true \
     \
     # clone source code and install dependencies
     && git clone --branch v1.25.0 https://github.com/RocketChat/Rocket.Chat.Apps-engine /app/Rocket.Chat.Apps-engine \
-    && cd /app/Rocket.Chat.Apps-engine && npm install && npm run compile \
+    && cd /app/Rocket.Chat.Apps-engine && yarn install && yarn run compile \
     && git clone --branch 3.14.0 https://github.com/RocketChat/Rocket.Chat /app/Rocket.Chat \
-    && cd /app/Rocket.Chat && meteor npm install ../Rocket.Chat.Apps-engine \
-    && git clone --branch 3.2.2 https://github.com/RocketChat/Rocket.Chat.Electron /app/Rocket.Chat.Electron \
-    && cd /app/Rocket.Chat.Electron && yarn --check-files && yarn build \
+    && cd /app/Rocket.Chat && meteor yarn add ../Rocket.Chat.Apps-engine \
     \
-    && cd /app/Rocket.Chat \
-    && (timeout 9m meteor run --inspect; exit 0) \
+    && echo -e 'pcm.!default {\n type hw\n card 0\n}\n\nctl.!default {\n type hw\n card 0\n}' > /app/.asoundrc \
+    && meteor yarn run testunit --exclude app/models/server/models/Sessions.tests.js \
+    && (TEST_MODE=true meteor run --allow-superuser & sleep 9m) && meteor yarn run test && pkill node \
+    \
     && meteor --allow-superuser build --server-only --directory /app \
-    && cd /app/bundle/programs/server && npm install \
+    && cd /app/bundle/programs/server && yarn install \
     \
     # purge build-deps (the g++ may lead the critical vulnerability `CVE-2019-19814`)
     && apt-mark auto '.*' > /dev/null && apt-mark manual $aptMark > /dev/null \
     && find /usr/local -type f -executable -exec ldd '{}' ';' | awk '/=>/ { print $(NF-1) }' | sort -u | xargs -r dpkg-query --search | cut -d: -f1 | sort -u | xargs -r apt-mark manual \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
     \
-    # purge source code and leave the build env only
-    && mkdir /app/locks \
-    && cd /app/Rocket.Chat && mv package-lock.json ../locks/rc-package-lock.json \
-    && (git ls-files -z | xargs -0 rm -f) && (git ls-tree --name-only -d -r -z HEAD | sort -rz | xargs -0 rmdir || true) \
-    && cd /app/Rocket.Chat.Apps-engine && mv package-lock.json ../locks/rc-ae-package-lock.json && rm -rf client definition lib server \
-    && (git ls-files -z | xargs -0 rm -f) && (git ls-tree --name-only -d -r -z HEAD | sort -rz | xargs -0 rmdir || true) \
-    && cd /app/Rocket.Chat.Electron && mv yarn.lock ../locks/rc-electron-yarn.lock && rm -rf app \
-    && (git ls-files -z | xargs -0 rm -f) && (git ls-tree --name-only -d -r -z HEAD | sort -rz | xargs -0 rmdir || true) \
+    && mv /app/Rocket.Chat/.git /app/rc.git && mv /app/Rocket.Chat.Apps-engine /app/rcae.git \
+    && rm -rf /app/bundle /app/Rocket.Chat /app/Rocket.Chat.Apps-engine && mkdir -p /app/Rocket.Chat /app/Rocket.Chat.Apps-engine \
+    && mv /app/rc.git /app/Rocket.Chat/.git && mv /app/rcae.git /app/Rocket.Chat.Apps-engine \
     \
     # grant file access permission for all users (also require setting the `HOME=/app` to share caches across users)
-    && mkdir -p /home/rocketchat && chown -R rocketchat:rocketchat /app /home/rocketchat && chmod -R ugo+rwX /app /home
+    && chown -R rocketchat:rocketchat /app && chmod -R ugo+rwX /app
