--- a/docker/DockerfileRuntime
+++ b/docker/DockerfileRuntime
@@ -4,7 +4,7 @@ COPY bundle /app/bundle
 ENV RC_VERSION=3.16.2 NODE_ENV=production
 RUN groupadd -r rocketchat && useradd -r -g rocketchat rocketchat \
     && apt-get update && apt-get install -y --no-install-recommends fontconfig && rm -rf /var/lib/apt/lists/* \
-    && mkdir -p /app/uploads && mkdir -p /app/bundle && chown -R rocketchat:rocketchat /app
+    && mkdir -p /app/uploads && chown -R rocketchat:rocketchat /app
 
 USER rocketchat
 VOLUME /app/uploads
