--- a/docker/DockerfileBuild
+++ b/docker/DockerfileBuild
@@ -19,16 +19,18 @@ RUN groupadd -r rocketchat && useradd -r -g rocketchat rocketchat \
     && curl https://install.meteor.com/?release=2.1.1 | sh \
     && git clone --branch 3.16.2 https://github.com/RocketChat/Rocket.Chat /app/Rocket.Chat \
     && cd /app/Rocket.Chat && meteor npm install \
+    && cd /app/Rocket.Chat/ee/server/services && npm install && cd - \
     \
     \
-    # run unit and e2e tests
+    # run precheck and tests
     ## adopt dummy sound card for e2e test
     && echo 'pcm.!default {\n type hw\n card 0\n}\n\nctl.!default {\n type hw\n card 0\n}' > /app/.asoundrc \
+    && meteor npm run lint && meteor npm run translation-check && meteor npm run typecheck \
     && meteor npm run testunit -- --exclude app/models/server/models/Sessions.tests.js \
-    && (TEST_MODE=true meteor run & sleep 7m) && meteor npm run test && pkill node \
+    && (TEST_MODE=true meteor run & sleep 7m) && METEOR_PROFILE=500 meteor npm run test && pkill node \
     \
     # generate app bundle artifacts
-    && meteor build --server-only --directory /app \
+    && METEOR_PROFILE=500 meteor build --server-only --directory /app \
     && cd /app/bundle/programs/server && npm install \
     \
     \
@@ -38,10 +40,13 @@ RUN groupadd -r rocketchat && useradd -r -g rocketchat rocketchat \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
     \
     # keep the .git folder and compressed node_modules as well as purge source code
-    && mkdir -p /app/meta/bundle \
+    && chown -R rocketchat:rocketchat /app/Rocket.Chat && chmod -R ugo+rwX /app/Rocket.Chat \
+    && mkdir -p /app/meta/bundle /app/meta/ee && mv /app/Rocket.Chat/.git /app/meta/.git \
     && tar -zcf /app/meta/node_modules.tar.gz --directory /app/Rocket.Chat node_modules \
+    && tar -zcf /app/meta/ee/node_modules.tar.gz --directory /app/Rocket.Chat/ee/server/services node_modules \
     && tar -zcf /app/meta/bundle/node_modules.tar.gz --directory /app/bundle/programs/server node_modules \
-    && mv /app/Rocket.Chat/.git /app/Rocket.Chat/package*.json /app/meta \
+    && mv /app/Rocket.Chat/package*.json /app/meta \
+    && mv /app/Rocket.Chat/ee/server/services/package*.json /app/meta/ee \
     && mv /app/bundle/programs/server/package*.json /app/meta/bundle \
     && rm -rf /app/Rocket.Chat /app/bundle && mkdir -p /app/Rocket.Chat && mv /app/meta/.git /app/Rocket.Chat/.git \
     \
